test/errors/array_types_error/zs/wrong_array_length_type_error.zs
package wrong_array_length_type_error;

struct WrongArrayLengthTypeError
{
    bool    myArrayLength;
    bit:1   myArray[myArrayLength];
};
